fix(styles): done dialog height and text align

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -351,7 +351,7 @@ body {
         }
         #done-dialog[open] {
             width: 15%;
-            height: 10%;
+            height: 15%;
             top: 45%;
             left: 43%;
             border: 3px solid #48b;
@@ -364,6 +364,9 @@ body {
             align-items: center;
             gap: .5em;
             color: #0F0;
+            h3 {
+                text-align: center;
+            }
             div {
                 width: 100%;
                 display: flex;
